# OpenCV

./: .gitignore  README.md
Code/: CMakeLists.txt  EliminateBackground.cpp  FloodFill.cpp  HintOfTemplate.cpp  MergeIntoBackground.cpp  SeamlessCloning.cpp
Resource/: AsinName.txt  AsinRegion.txt  TextRegion.txt
