cmake_minimum_required(VERSION 2.8)
project(OpenCV)
add_executable(EliminateBackground EliminateBackground.cpp)
add_executable(HintOfTemplate HintOfTemplate.cpp)
add_executable(SeamlessCloning SeamlessCloning.cpp)
add_executable(MergeIntoBackground MergeIntoBackground.cpp)
find_package(OpenCV REQUIRED)
target_link_libraries(EliminateBackground ${OpenCV_LIBS})
target_link_libraries(HintOfTemplate ${OpenCV_LIBS})
target_link_libraries(SeamlessCloning ${OpenCV_LIBS})
target_link_libraries(MergeIntoBackground ${OpenCV_LIBS})